--- a/styles/resume.css
+++ b/styles/resume.css
@@ -7,7 +7,7 @@
 
 
 .resume-card {
-    width: 450px;
+    width: 420px;
     margin: 15px;
     /* border: 5px solid #240b36; */
     border-radius: 10px;
@@ -131,8 +131,15 @@
     z-index: 0;
 }
 
+@media only screen and (max-width: 1200px) {
 
-@media only screen and (max-width: 640px) {
+.resume-btn {
+    font-size: 80%;
+}
+
+}
+
+@media only screen and (max-width: 786px) {
 /* Mobile styles */
     .resume-wrapper {
         flex-direction: column;
@@ -140,6 +147,7 @@
 
     .resume-card {
         width: unset;
+        max-width: 600px;
         grid-template-rows: [s s-header] 120px [e-header s-icon] 57px [e-icon s-title] 40px [e-title s-buttons] 1fr [e-buttons] 5px [e];
         /* margin-right: 30px; */
     }
