--- a/styles/skills.css
+++ b/styles/skills.css
@@ -8,7 +8,7 @@
 
 .skill-card {
     background: #250b36;
-    height: 210px;
+    height: 190px;
     /* width: 250px; */
     border-radius: 10px;
     transition: 0.2s ease-in-out all;
@@ -24,8 +24,8 @@ box-shadow: 2px 2px 10px -3px rgba(37,11,54,1);
 
 .skill-card > .skill-icon {
     /* width: 200px; */
-    height: 170px;
-    font-size: 8em;
+    height: 150px;
+    font-size: 7em;
     background: #fff;
     display: flex;
     justify-content: center;
@@ -52,6 +52,16 @@ box-shadow: 2px 2px 10px -3px rgba(37,11,54,1);
 @media only screen and (max-width: 640px) {
     .skills-grid {
         margin-left: 20px;
+        grid-template-columns: repeat(auto-fill,170px);
+    }
+
+    .skill-card {
+        height: 160px;
+    }
+
+    .skill-card > .skill-icon {
+        height: 120px;
+        font-size: 6em;
     }
 }
 
@@ -60,13 +70,13 @@ box-shadow: 2px 2px 10px -3px rgba(37,11,54,1);
     .skills-grid {
         margin-left: 20px;
         margin-right: 40px;
-        grid-gap: 30px;
+        grid-gap: 20px;
         grid-template-columns: 1fr;
     }
 
     .skill-card {
         display: flex;
-        height: 60px;
+        height: 40px;
     }
     
 .skill-card:hover {
@@ -74,9 +84,9 @@ box-shadow: 2px 2px 10px -3px rgba(37,11,54,1);
 }
 
     .skill-card > .skill-icon {
-        height: 70px;
-        width: 70px;
-        font-size: 3.7em;
+        height: 50px;
+        width: 50px;
+        font-size: 2.7em;
         transform: translateY(-5px);
         border-radius: 5px;
         position: relative;
@@ -86,8 +96,8 @@ box-shadow: 2px 2px 10px -3px rgba(37,11,54,1);
     .skill-card > .skill-icon:before {
         content: '';
         position: absolute;
-        height: 70px;
-        width: 70px;
+        height: 50px;
+        width: 50px;
         background: white;
         z-index: -1;
         border-radius: 5px;
@@ -95,8 +105,8 @@ box-shadow: 2px 2px 10px -3px rgba(37,11,54,1);
 
     .skill-card > .skill-icon:after {
         content: '';
-        height: 72px;
-        width: 72px;
+        height: 52px;
+        width: 52px;
         background: #250b36;
         opacity: .3;
         position: absolute;
@@ -107,7 +117,7 @@ box-shadow: 2px 2px 10px -3px rgba(37,11,54,1);
     }
 
     .skill-text {
-        height: 60px;
+        height: 40px;
         margin-left: 20px;
     }
 
