--- a/styles/body.css
+++ b/styles/body.css
@@ -77,3 +77,15 @@ body {
     text-transform: uppercase;
 }
 
+#preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: white;
+    z-index: 999;
+    background-image: url("../static/images/ui/preloader.gif");
+    background-repeat: no-repeat;
+    background-position: center;
+}
